
1.2.27  -   Master.: Corrige processo de atualização do software.
20231009             Caso não haja UndoStatus, atribui bio_ready.
                     Testa se Volume>0 para restaurar cultivo.
            Front..: Corrige atualização do cadastro da Biofábrica. Corrige verificação da versão para Upgrade.

1.2.28  -   Master.: Redefinir tarefas passa a sincronizar status de todas as válvulas.
20231009             Permite remotamente mudar o techmode.
            Back...: Implementa endpoint para mudança do techmode
            Front..: Opção de redefinir dados (bio e ibc) só está habilitada no Portal das Biofábricas.
                     Cria botão que permite ativar/desativar techmode
                     Passa a mostrar volume de entrada também (fluxometro de entrada)

1.2.29  -   Master.: Cria backups de todos os dumpdata e na hora do load tenta original e backup
20231013             Função recovery, se necessário, reinicia threads de get_all e sync 
            Agent..: Corrige bug do defer para o caso de não estabelecer a conexão com o network

1.2.30  -   Master.: Faz testes de consistência e exibe eventuais mensagens de erro durante calibração de PH.
20231015             Avisa pra checar nível dos produtos no cultivo. 
                     Informa que aplicou PH+ ou PH- para corrigir PH.
                     Alerta se não houve variação do PH depois de 5 tentativas seguidas de correção.

1.2.31  -   Master.: Função save_all força o "sync" do sistema operacional.
20231017             Retorna mensagens de ok/erro para o front durante a calibração de PH.
                     No starup, função check_network passa a ser executada depois das rotinas básicas e aguarda 60 segundos antes de iniciar testes.
                     Biofábrica não inicia enquanto Roteador Principal não existe online.
            Front..: Exibe as mensagens retornadas pelo master durante a calibração de PH.